Main site launch & cleanup

--- a/_pages/company-overview.html
+++ b/_pages/company-overview.html
@@ -2,7 +2,7 @@
 layout: page
 pagename: overview
 permalink: /company-overview.html
-title: Company Overview | Civil 360 Planning & Engineering
+title: Company Overview \| Civil 360 Planning & Engineering
 description: Company Overview - Integrated Planning, Civil Engineering & Design Services.
 bc_display: Company Overview
 ---
@@ -36,7 +36,7 @@ bc_display: Company Overview
 
       <div class="col-md-5">
         <div class="image">
-          <img src="/assets/img/image08.jpg" alt="About Image">
+          <img src="/assets/img/highrise-construction.jpg" alt="Building under construction">
         </div>
       </div>
     </div>
@@ -56,18 +56,16 @@ bc_display: Company Overview
 
     <div class="row">
       <div class="col-md-12">
-        <p>Ms. Escobedo grew up in New Jersey, attended Widener University and graduated with her B.S. degree in Civil
-          Engineering. She then moved to Indiana where she attended graduate school at Purdue University and graduated
+        <p>Ms. Escobedo grew up in New Jersey. She attended Widener University in Pennsylvania and graduated with her B.S. degree in Civil Engineering in 1994. She then moved to Indiana where she attended Purdue University and graduated
           with her M.S. degree in Civil Engineering in 1996.</p>
-        <p>After graduation in 1996, Ms. Escobedo started working at a local firm in Indianapolis as a junior roadway
-          engineer. In 2000 she was offered a position in Las Vegas, joining one of the companies working on the Hoover
-          Dam Bypass project. In 2002 she began working in Land Development, and that is when her passion for civil
-          engineering started to grow.</p>
+        <p>Following graduation in 1996, Ms. Escobedo worked at a local civil firm in Indianapolis as a junior roadway
+          engineer. In 2000 she moved to Las Vegas, joining one of the companies working on the Hoover
+          Dam Bypass project. In 2002 she began working in Land Development, and started to develop her true passion for civil engineering.</p>
         <p>
           Ms. Escobedo most recently served in the capacity of Regional Manager for a national engineering firm where
           she had an opportunity to develop and cultivate relationships beyond her expectations. Her passion for civil
-          engineering, along with the support she has received from some very influential members in the industry, have
-          led to the establishment of CIVIL 360 LLC.
+          engineering, along with the support from her team, clients and some very influential members in the industry, have
+          led to the establishment of CIVIL 360 Planning &amp; Engineering.
         </p>
       </div>
 
