--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -15,33 +15,53 @@ bc_display: Contact
         <div class="title">
           <h2>Contact Civil 360</h2>
           <span class="line"></span>
-          The CIVIL 360 Engineering Office is in the works, check back for office opening information.  Anticipated office opening on or before November 1, 2019.
+          The CIVIL 360 Engineering Office will be posting information for an open house in December 2019 -- check back for open house information and details.
         </div>
       </div>
     </div>
 
     <div class="row">
 
-      <div class="col-12">
+      <div class="col-6">
         <h4>CIVIL 360 Planning & Engineering</h4>
-        <p>Jennifer L. Escobedo, P.E.<br/>
-          President<br/>
-          Email: <a href="mailto:{{ site.email }}">{{ site.email }}</a><br/>
-          Phone: <a href="tel:{{ site.phone }}">{{ site.phone }}</a>
+        
+        <p>6490 W. Desert Inn Road<br/>
+          Las Vegas, NV 89146<br/>
+          <span class="bold">Email:</span> <a href="mailto:{{ site.email }}">{{ site.email }}</a><br/>
+          <span class="bold">Phone:</span> <a href="tel:{{ site.phone }}">{{ site.phone }}</a>
         </p>
 
-        <p><span class="bold">Mailing Address:</span><br/>
-          220 Emerald Vista Way<br/>
-          Unit 164<br/>
-          Las Vegas, NV 89144
+        <p><span class="bold">Office Hours:</span><br/>
+          Monday - Friday: 8am to 5pm
         </p>
-
+      
       </div>
+      <div class="col-6">
+        <p><span class="bold">Principal</span><br/>
+          Jennifer L. Escobedo, P.E.<br/>
+          Email: <a href="mailto:{{ site.email_jen }}">{{ site.email_jen }}</a><br/>
+        </p>
 
+        <p><span class="bold">Office Manager</span><br/>
+          Braum Orphan<br/> 
+          Email: <a href="mailto:{{ site.email_om }}">{{ site.email_om }}</a><br/>
+        </p>
+      </div>
     </div>
   </div>
 </div>
 
+<!-- Map -->
+<div id="map">
+    <div class="container">
+        <div class="title">
+            <h2>Visit our Office</h2>
+            <span class="line"></span>
+            <p>At the corner of Desert Inn &amp; Torrey Pines</p>
+        </div>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3222.7047722192565!2d-115.23579718377457!3d36.129629980092!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c8c6d52a4c9839%3A0x5b6eaeaa029d47c3!2s6490%20W%20Desert%20Inn%20Rd%2C%20Las%20Vegas%2C%20NV%2089146!5e0!3m2!1sen!2sus!4v1571092515238!5m2!1sen!2sus" width="100%" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+    </div>
+</div>
 
 
 
