--- a/_pages/services.html
+++ b/_pages/services.html
@@ -2,8 +2,8 @@
 layout: page
 pagename: services
 permalink: /services.html
-title: Services | Civil 360 Planning & Engineering
-description: Services - Integrated Planning, Civil Engineering & Design Services.
+title: Civil 360 Planning &amp; Engineering Services
+description: Civil Engineering services including Land Use & Entitlements, Site & Land Planning, Site Development & Design, Processing & Facilitation, Construction Administration - Civil 360 Planning & Engineering.
 bc_display: Services
 ---
 
@@ -15,7 +15,7 @@ bc_display: Services
         <div class="title">
           <h2>Civil 360 Services</h2>
           <span class="line"></span>
-          <p>We offer a range of services in support of your project from start to finish.</p>
+          <p>We offer a range of services to support your project from planning to design and through construction.</p>
         </div>
       </div>
     </div>
@@ -23,7 +23,7 @@ bc_display: Services
 
     <div class="row">
       <div class="col-md-6">
-        <h3>Land Use &amp; Entitlement</h3>
+        <h3>Land Use &amp; Entitlements</h3>
         <ul>
           <li>Property Due Diligence</li>
           <li>Land Use Consulting</li>
@@ -38,11 +38,11 @@ bc_display: Services
           <li>Site Investigation Reports</li>
         </ul>
 
-        <h3>Site Development Design</h3>
+        <h3>Site Development &amp; Design</h3>
         <ul>
-          <li>Engineering Studies</li>
+          <li>Engineering Studies (Drainage, Traffice &amp; Utility)</li>
           <li>Site Grading, Drainage, Utility &amp; Paving Design</li>
-          <li>Value Engineering</li>
+          <li>Value Engineering (VE)</li>
           <li>Agency Coordination and Liaison</li>
         </ul>
 
@@ -50,7 +50,7 @@ bc_display: Services
         <ul>
           <li>Planning Applications</li>
           <li>Permit Applications</li>
-          <li>High level coordination/facilitation with regulatory agencies</li>
+          <li>High level coordination / facilitation with&nbsp;regulatory&nbsp;agencies</li>
           <li>Permit document delivery</li>
         </ul>
 
@@ -64,7 +64,7 @@ bc_display: Services
 
       <div class="col-md-6">
         <div class="image">
-          <img src="/assets/img/plans.jpg" class="img-fluid" alt="Engineering Plans">
+          <img src="/assets/img/plans.jpg" class="img-fluid" alt="Engineering plans">
         </div>
       </div>
     </div>
