Tweaking date for open house

--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -15,7 +15,7 @@ bc_display: Contact
         <div class="title">
           <h2>Contact Civil 360</h2>
           <span class="line"></span>
-          The CIVIL 360 Engineering Office will be posting information for an open house in December 2019 -- check back for open house information and details.
+          The CIVIL 360 Engineering Office will be posting information for an open house soon -- check back for open house information and details.
         </div>
       </div>
     </div>
